--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </form>
     </header>
 
-    <script src="./assets/js/script.js"></script>
+    <!-- <script src="./assets/js/script.js"></script> -->
 
     <main class="page-content" id="page-content">
         <section class="task-list-wrapper">
@@ -53,9 +53,11 @@
             <ul class="task-list" id="tasks-completed"></ul>
         </section>
     </main>
+
     <footer>
         &copy;2020 by Taskinator
     </footer>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
